# chap-site

./: .gitignore  404.html  CNAME  Makefile  README.md  index.html  mkdocs.yml  mkdocsOld.yml  pyproject.toml  requirements.txt  sitemap.xml  sync-config.json
.github/workflows/: deploy.yml  sync-modeling-app-docs.yml
2026-webinar-series/: index.html
2026-webinar-series/session-1/: index.html
2026-webinar-series/session-2/: index.html
2026-webinar-series/session-3/: index.html
2026-webinar-series/session-4/: index.html
2026-webinar-series/session-5/: index.html
2026-webinar-series/session-6/: index.html
_publications/: index.html
about/: index.html
about/motivation/: index.html
about/partners/: index.html
about/roadmap/: index.html
about/team/: index.html
assets/stylesheets/: extra.css
chap-modeling-platform/: index.html
chap-modeling-platform/CLAUDE/: index.html
chap-modeling-platform/api/: index.html
chap-modeling-platform/changelog/: index.html
chap-modeling-platform/chap-cli/: index.html
chap-modeling-platform/contributor/: index.html
chap-modeling-platform/external_models/: index.html
chap-modeling-platform/feature_tutorials/: index.html
chap-modeling-platform/features_overview/: index.html
chap-modeling-platform/kigali-workshop/: index.html
climate-data/: index.html
community/newsletter/: index.html
docs/: CNAME  index.md  indexClimTools.md
guides/: index.html
overrides/: footer.html  main.html
scripts/: fetch-external-docs.py  sync-modeling-app-docs.py
search/: search_index.json
tech-intro/: index.html
(+188 files in other folders)
