[project]
name = "chap-site"
version = "0.1.0"
description = "DHIS2 Modeling documentation site"
requires-python = ">=3.10"
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-video",
    "mkdocs-gen-files",
    "mkdocs-minify-plugin",
    "pymdown-extensions",
]

[project.scripts]
serve = "mkdocs:serve"

[tool.uv.scripts]
serve = "mkdocs serve"
build = "mkdocs build"
